package com.tripcraft.attraction.domain;

import lombok.AllArgsConstructor;
import lombok.Getter;

@Getter
@AllArgsConstructor
public class Sigungu {

    private Integer sidoCode;
    private Integer sigunguCode;
    private String name;
    private String alias;
}
